--- a/lesson6/task1/src/index.html
+++ b/lesson6/task1/src/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-
   <body>
     <div class="page">
-      <div class="profile"></div>
+      <div class="profile">
+        <span class="profile__name"></span>
+        <span class="profile__location"></span>
+      </div>
     </div>
     <script src="./bundle.js"></script>
   </body>
